...

type CalendarProps = { title: string; onPress: () => void };

const Calendar: FC<CalendarProps> = ({ title, onPress }) => {
  return (
    <TouchableOpacity
      testID={"date-selector-calendar"}
      style={calendarStyles.main}
      onPress={onPress}
    >
      <Text>{title}</Text>
    </TouchableOpacity>
  );
...
